--- a/Aatm/pom.xml
+++ b/Aatm/pom.xml
@@ -1,12 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.maven</groupId>
-  <artifactId>commons-math</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-  <dependency>
-  <groupId>org.apache.maven</groupId>
-  <artifactId>commons-math</artifactId>
-  </dependency>
-  </dependencies>
+<?xml version="1.0"?>
+
+-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
+
+<modelVersion>4.0.0</modelVersion>
+
+<groupId>ATM</groupId>
+
+<artifactId>com.Atm</artifactId>
+
+<version>0.0.1-SNAPSHOT</version>
+
+
+-<dependencies>
+
+
+-<dependency>
+
+<groupId>ATM</groupId>
+
+<artifactId>AA</artifactId>
+
+<version>0.0.1-SNAPSHOT</version>
+
+</dependency>
+
+</dependencies>
+
 </project>
